--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - My Portfolio</title>
+    <title>About - My Portfolio</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -33,10 +33,8 @@
     </nav>
     <!-- Content -->
     <div class="container mt-5">
-        <div class="jumbotron">
-            <h1>Welcome to My Portfolio</h1>
-            <p>Hi, I'm Yajesh Sai Kiran,Im pursuing my full stack web development in edumoon</p>
-        </div>
+        <h1>About Me</h1>
+        <p>I'm a web developer with experience in HTML, CSS, JavaScript.I'm pursuing my btech in Anits college</p>
     </div>
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
